# AndroidTV-ESP32Control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: TVConnectionStatus.h  TVControl.h  TVControlConfiguration.h
sample/basic_controller/: CMakeLists.txt  sdkconfig.defaults
sample/basic_controller/main/: main.cpp  main.h
src/: TVConnectionStatus.cpp  TVControl.cpp  TVControlConfiguration.cpp
